--- a/styles/product.css
+++ b/styles/product.css
@@ -693,6 +693,10 @@ footer {
         font-size: 18px;
     }
 
+    .cart-container {
+        padding: 8px 35px;
+    }
+
     .product-images-collection {
         display: grid;
         grid-template-columns: 1fr;
