--- a/styles/index.css
+++ b/styles/index.css
@@ -108,6 +108,100 @@ a.navbar-burger {
     margin-right: 50px;
 }
 
+/* cart container */
+.cart-container {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    flex-direction: row-reverse;
+    padding: 8px 65px;
+    background-color: var(--white-color);
+}
+
+.cart {
+    cursor: pointer;
+    position: relative;
+    text-decoration: none;
+    color: var(--black-color);
+    font-size: 24px;
+    margin-right: 10px;
+    background-color: transparent;
+}
+
+.cart i:hover {
+    color: var(--red-color);
+}
+
+.no-addedtocart {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    font-size: 10px;
+    background-color: var(--red-color);
+    display: grid;
+    place-items: center;
+}
+
+.user {
+    cursor: pointer;
+    position: relative;
+    text-decoration: none;
+    color: var(--black-color);
+    font-size: 24px;
+    margin-right: 10px;
+    background-color: transparent;
+}
+
+.user i:hover {
+    color: var(--red-color);
+}
+
+.user-menu {
+    position: absolute;
+    right: 7.5px;
+    top: 24px;
+    background-color: #ffffff;
+    border-radius: var(--border-radius);
+    padding: 12px 16px;
+    box-shadow: 10px 13px 7px -6px rgba(0, 0, 0, 0.1);
+    display: none;
+}
+
+.user:focus-within .user-menu {
+    display: block;
+}
+
+.user-menu-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.user-menu-child {
+    padding: 8px 12px;
+    font-size: 14px;
+    width: 100%;
+    color: var(--black-color);
+    text-decoration: none;
+    border-radius: var(--border-radius);
+    margin-bottom: 5px;
+}
+
+.user-menu-child:hover {
+    background-color: var(--red-color);
+    color: var(--white-color);
+}
+
+.or {
+    font-size: 14px;
+    color: var(--grey-color);
+    margin-bottom: 5px;
+}
+
 /* hero */
 .hero {
     display: flex;
@@ -794,6 +888,10 @@ footer {
 
     .navbar-side a {
         font-size: 18px;
+    }
+
+    .cart-container {
+        padding: 8px 35px;
     }
 
     .countdown {
