--- a/styles/register.css
+++ b/styles/register.css
@@ -29,6 +29,13 @@ input:focus {
     outline: none;
 }
 
+/* input:focus,
+select:focus,
+button:focus {
+    border: 2px solid var(--red-color);
+    outline: 2px solid rgba(223, 40, 40, 0.3);
+} */
+
 /* navbar */
 .navbar {
     display: flex;
@@ -245,6 +252,15 @@ a.breadcrumb-element:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.register-msg {
+    background-color: var(--red-color);
+    color: var(--white-color);
+    padding: 15px 20px;
+    text-align: center;
+    margin-bottom: 25px;
+    border-radius: var(--border-radius);
 }
 
 .register-form {
