--- a/styles/product.css
+++ b/styles/product.css
@@ -299,7 +299,6 @@ a.breadcrumb-element:hover {
 
 button.detaildecrease {
     position: relative;
-    left: 5px;
     border-top-left-radius: var(--border-radius);
     border-bottom-left-radius: var(--border-radius);
     padding: 10px 12px;
@@ -309,16 +308,11 @@ button.detaildecrease {
 }
 
 button.detaildecrease:hover {
-    background-color: transparent;
-}
-
-button.detaildecrease:focus {
-    transform: scale(1.0025);
+    background-color: var(--white-color);
 }
 
 button.detailincrease {
     position: relative;
-    right: 6px;
     border-top-right-radius: var(--border-radius);
     border-bottom-right-radius: var(--border-radius);
     padding: 10px 12px;
@@ -328,18 +322,21 @@ button.detailincrease {
 }
 
 button.detailincrease:hover {
-    background-color: transparent;
+    background-color: var(--white-color);
 }
 
-button.detailincrease:focus {
-    transform: scale(1);
+.product-detail-quantity {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .product-detail-buttons input {
-    padding: 9px 16px;
-    font-size: 16px;
+    padding: 10px 6px;
     width: 55px;
-    border: 2px solid var(--grey-color);
+    border-bottom: 2px solid var(--grey-color);
+    border-top: 2px solid var(--grey-color);
+    border-left: 2px solid white;
+    border-right: 2px solid white;
     text-align: center;
 }
 
